# ClusterClassroom

./: README.md  justfile
.devcontainer/: Containerfile  devcontainer.json
.github/: dependabot.yaml
.github/workflows/: build-controller.yaml  cli_ci.yaml  controller.yaml  controller_build.yaml  controller_lint.yaml  controller_test-e2e.yaml  controller_test.yml  lint_controller.yml  release.yaml  test-e2e.yml
cli/: Cargo.toml
cli/examples/: task_sample.yaml
cli/src/: cli.rs  config.rs  main.rs
controller/: Makefile  PROJECT  README.md  go.mod  go.sum  justfile
controller/api/v1/: clusterclassroom_types.go  groupversion_info.go  zz_generated.deepcopy.go
controller/cmd/: main.go
controller/config/crd/: kustomization.yaml
controller/config/default/: kustomization.yaml  metrics_service.yaml
controller/config/manager/: kustomization.yaml  manager.yaml
controller/config/network-policy/: allow-metrics-traffic.yaml
controller/config/prometheus/: monitor.yaml
controller/config/rbac/: clusterclassroom_editor_role.yaml  clusterclassroom_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
controller/config/samples/: classroom_v1_clusterclassroom.yaml  crd_v1_clusterclassroom.yaml  kustomization.yaml
controller/internal/controller/: clusterclassroom_controller.go  clusterclassroom_controller_test.go  suite_test.go
docs/: deploy-task.tape  install-controller.tape
docs/asstes/: install-controller.webm
docs/schemas/: task.json
(+8 files in other folders)
