[package]
name = "cccli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
schemars = "0.8.21"
serde = { version = "1.0.215", features = ["derive"] }
serde_yml = "0.0.12"
thiserror = "2.0.3"
kube = { version = "0.96.0", features = [
    "runtime",
    "derive",
    "jsonpatch",
    "ws",
] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde_json = "1.0.132"


[features]
schema = []
